# astrosee

./: .gitignore  README.md  pyproject.toml
src/astrosee/: __init__.py  __main__.py
src/astrosee/astronomy/: __init__.py  calculator.py  catalog.py  models.py
src/astrosee/astronomy/data/: catalog.json
src/astrosee/cli/: __init__.py  context.py  main.py
src/astrosee/cli/commands/: advise.py  alert.py  best_window.py  compare.py  config.py  equipment.py  forecast.py  now.py  session.py  target.py  timelapse.py  watch.py  widget.py
src/astrosee/core/: __init__.py  exceptions.py  utils.py
src/astrosee/display/: __init__.py  charts.py  formatters.py  renderer.py
src/astrosee/scoring/: __init__.py  components.py  engine.py  models.py
src/astrosee/services/: __init__.py  advisor.py  alerts.py  forecast.py  seeing.py  timelapse.py
src/astrosee/services/sessions/: __init__.py  exporter.py  manager.py  models.py
src/astrosee/storage/: __init__.py  cache.py  config.py
src/astrosee/weather/: __init__.py  models.py  noaa_gfs.py  openmeteo.py  protocols.py
src/astrosee/widget/: __init__.py  app.py  icons.py  menu_builder.py
tests/: __init__.py  conftest.py  test_scoring.py
