[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astrosee"
version = "0.1.0"
description = "Astronomical seeing prediction CLI for macOS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Astrosee Team"}
]
keywords = ["astronomy", "seeing", "weather", "telescope", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.25",
    "pydantic>=2.0",
    "skyfield>=1.46",
    "aiosqlite>=0.19",
    "tomli>=2.0;python_version<'3.11'",
    "tomli-w>=1.0",
    "plotille>=5.0",
    "matplotlib>=3.8",
    "rumps>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
astrosee = "astrosee.cli.main:cli"
astrosee-widget = "astrosee.widget.app:main"

[project.urls]
Homepage = "https://github.com/astrosee/astrosee"
Repository = "https://github.com/astrosee/astrosee"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
astrosee = ["astronomy/data/*.json", "widget/assets/*.png"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
